--- a/jspui/pom.xml
+++ b/jspui/pom.xml
@@ -4,7 +4,7 @@
    <parent>
        <groupId>de.the-library-code.dspace</groupId>
        <artifactId>addon-identifiers-enduring-submission</artifactId>
-       <version>5.8.0-SNAPSHOT</version>
+       <version>5.8.0</version>
        <relativePath>../</relativePath>
    </parent>
    <groupId>de.the-library-code.dspace</groupId>
