--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <groupId>de.the-library-code.dspace</groupId>
    <artifactId>addon-identifiers-enduring-submission</artifactId>
    <packaging>pom</packaging>
-   <version>5.8.0</version>
+   <version>5.8.1-SNAPSHOT</version>
    <name>DSpace Addon: Identifiers enduring submission</name>
    <description>
    	This is an addon to DSpace to mint and list persistent identifiers enduring the submission of new items.
@@ -39,7 +39,7 @@
         <connection>scm:git:git@github.com:the-library-code/identifiers-enduring-submission.git</connection>
         <developerConnection>scm:git:git@github.com:the-library-code/identifiers-enduring-submission.git</developerConnection>
         <url>git@github.com:the-library-code/identifiers-enduring-submission.git</url>
-      <tag>identifier-enduring-submission-5.8.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
